# news-analyzer

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  bot.py  main.py  settings.py
app/engines/: postgres_storage.py
app/models/: base.py  news.py
app/repositories/: news.py
app/routers/: __init__.py  news.py
app/schemаs/: base.py  news.py
app/services/: news.py
news_parser/: Dockerfile  adapter.py  app.py  config.py
news_parser/parsers/habr/: parser.py
news_parser/parsers/hi_tech/: parser.py
news_parser/parsers/kod/: parser.py
news_parser/parsers/rbc/: parser.py
postgres/init_data/: start_sql_001.sql
